--- a/flex_box_etc.css
+++ b/flex_box_etc.css
@@ -33,5 +33,9 @@ header, footer{
 .container{
     display: grid;
     grid-template-columns: repeat(3, 1fr);
-    gap: 2rem
+    gap: 1rem
+}
+
+.inicio{
+    grid-column-start: 2;
 }
